# arabseed-scraper

./: README.md  arabseed_scraper.py  pypi_publish_guide.md  pyproject.toml  setup.py  verify_scraper.py
arabseed_scraper/: __init__.py  cli.py  scraper.py
arabseed_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: index.html
tests/: test_scraper.py
